--- a/inventory.sample.ini
+++ b/inventory.sample.ini
@@ -1,6 +1,7 @@
 [mainnets]
 juno-node-1 ansible_host=10.0.0.1
 juno-node-2 ansible_host=10.0.0.1
+evmos-node-1 ansible_host=10.0.0.1
 
 [all:vars]
 ansible_user=ubuntu
