--- a/evmos.yml
+++ b/evmos.yml
@@ -14,7 +14,7 @@
     # daemon: cosmosvisor
 
     # Personal peer IDs if needed.
-    - relayer_personal_peer_id: ''
+    - personal_peer_ids: ''
 
     ####################################################################################
     # Other variables - You likely don't need to modify anything below this line.
@@ -39,10 +39,10 @@
     
     # Version of Skip's MEV Tendermint to substitute into the node.
     - skip_version: v0.34.22-mev.9
-    # Skip's relayer peer
-    - relayer_peer_string: "c0a2990e2a5dad7f4ace044d2f936de6891c6f0a@evmos_9001-2-sentinel.skip.money:26656"
-    # Skip's relayer RPC
-    - relayer_rpc_string: "http://evmos_9001-2-api.skip.money"
+    # Skip sentinel peer
+    - sentinel_peer_string: "c0a2990e2a5dad7f4ace044d2f936de6891c6f0a@evmos_9001-2-sentinel.skip.money:26656"
+    # Skip sentinel RPC
+    - sentinel_rpc_string: "http://evmos_9001-2-api.skip.money"
 
     #-----------------------------------------
     # Configuration for Node
