--- a/terra.yml
+++ b/terra.yml
@@ -39,10 +39,10 @@
     
     # Version of Skip's MEV Tendermint to substitute into the node.
     - skip_version: v0.34.21-terra.1-mev.14
-    # Skip's relayer peer
-    - relayer_peer_string: "20a61f70d93af978a3bc1d6be634a57918934f79@phoenix-1-sentinel.skip.money:26656"
+    # Skip's sentinel peer
+    - sentinel_peer_string: "20a61f70d93af978a3bc1d6be634a57918934f79@phoenix-1-sentinel.skip.money:26656"
     # Skip's relayer RPC
-    - relayer_rpc_string: "http://phoenix-1-api.skip.money"
+    - sentinel_rpc_string: "http://phoenix-1-api.skip.money"
 
     #-----------------------------------------
     # Configuration for Node
